# ComfyUI

ComfyUI-SAM3-main/: .gitignore  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  prestartup_script.py  pyproject.toml  requirements.txt
ComfyUI-SAM3-main/nodes/: comfy-env.toml  load_model.py  utils.py
ComfyUI-SAM3-main/nodes/sam3/: __init__.py  attention.py  model.py
ComfyUI-SAM3-main/workflows/: image_seg_text.json
sam3_workflows/: 01_text_prompt_image.json  01c_text_prompt_transparent_png.json  02_box_prompt_image.json  03_point_prompt_image.json  04_multi_prompt_text.json  05_video_text_track.json  06_video_initial_mask_track.json  07_track_select_objects.json  08_track_preview.json  README.md
